[package]
name = "sysdump"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
license = "MIT"
readme = "README.md"
description = "Cross-platform system information viewer"
repository = "https://github.com/shellrow/sysdump"

[lib]
name="sysdump"
path="src/lib.rs"

[[bin]]
name="sysdump"
path = "src/bin/main.rs"

[dependencies]
default-net = "0.11.0"
sysinfo = "0.26.2"
netstat2 = "0.9.1"
reqwest = { version = "0.11.11", features = ["blocking", "json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term-table = "1.3.2"
directories = "4.0.1"
